--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "godzilla",
-  "version": "1.0.0",
-  "description": "",
-  "main": "gulpfile.js",
-  "dependencies": {},
-  "devDependencies": {
-    "gulp": "^4.0.0",
-    "gulp-import-css": "^0.1.3",
-    "gulp-sass": "^4.0.2"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sickbear/godzilla.git"
-  },
-  "author": "Eugene Suloev",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sickbear/godzilla/issues"
-  },
-  "homepage": "https://github.com/sickbear/godzilla#readme"
+    "name": "godzilla",
+    "version": "1.0.0",
+    "description": "",
+    "main": "gulpfile.js",
+    "dependencies": {},
+    "devDependencies": {
+        "gulp": "^4.0.0",
+        "gulp-image": "^4.4.1",
+        "gulp-import-css": "^0.1.3",
+        "gulp-sass": "^4.0.2"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/sickbear/godzilla.git"
+    },
+    "author": "Eugene Suloev",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/sickbear/godzilla/issues"
+    },
+    "homepage": "https://github.com/sickbear/godzilla#readme"
 }
