--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
     "main": "gulpfile.js",
     "dependencies": {},
     "devDependencies": {
+        "browser-sync": "^2.26.3",
+        "del": "^4.0.0",
         "gulp": "^4.0.0",
+        "gulp-autoprefixer": "^6.0.0",
+        "gulp-clean-css": "^4.0.0",
+        "gulp-concat": "^2.6.1",
         "gulp-image": "^4.4.1",
         "gulp-import-css": "^0.1.3",
-        "gulp-sass": "^4.0.2"
+        "gulp-sass": "^4.0.2",
+        "gulp-uglify": "^3.0.2",
+        "gulp-watch": "^5.0.1"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
