--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "gulp-import-css": "^0.1.3",
         "gulp-sass": "^4.0.2",
         "gulp-uglify": "^3.0.2",
-        "gulp-watch": "^5.0.1"
+        "gulp-watch": "^5.0.1",
+        "node-sass": "^4.11.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
